# Crypto-Equity-Trading-Bot

./: README.md  config.json
broker/: app.py  requirements.txt
engine/: CMakeLists.txt
engine/include/: bollinger.hpp  config.hpp  metrics.hpp  order_placer.hpp  rsi.hpp  strategy.hpp
engine/src/: bollinger.cpp  config.cpp  main.cpp  metrics.cpp  order_placer.cpp  rsi.cpp
